--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ pyrogram==2.0.106
 tgcrypto==1.2.5
 yt-dlp==2024.05.27
 ffmpeg-python==0.2.0
-git+https://github.com/callsmusic/pytgcalls.git@master
+git+https://github.com/dev-nasim/pytgcalls.git@main
